WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306806
REGRESSION(
304526@main
): Can't click link in Apple Maps on the Web business listing
https://bugs.webkit.org/show_bug.cgi?id=306806
Summary
REGRESSION(304526@main): Can't click link in Apple Maps on the Web business l...
Antti Koivisto
Reported
2026-02-02 14:32:43 PST
hit testing bug
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2026-02-02 14:33:21 PST
rdar://169437370
Antti Koivisto
Comment 2
2026-02-02 14:40:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57727
EWS
Comment 3
2026-02-02 19:18:47 PST
Committed
306675@main
(9abd7a26e0c8): <
https://commits.webkit.org/306675@main
> Reviewed commits have been landed. Closing PR #57727 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug