Cherry-pick 9abd7a26e0c8. rdar://169658053

REGRESSION(304526@main): Can't click link in Apple Maps on the Web business listing
    https://bugs.webkit.org/show_bug.cgi?id=306806
    rdar://169437370

    Reviewed by Alan Baradlay.

    Test: fast/inline/hittest-inline-background.html
    * LayoutTests/fast/inline/hittest-inline-background-expected.txt: Added.
    * LayoutTests/fast/inline/hittest-inline-background.html: Added.
    * Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
    (WebCore::LayoutIntegration::LineLayout::hitTest):

    The behavior in HitTestChildBlockBackground and HitTestChildBlockBackgrounds phases should be the same.
    The former is used for the block that is the hit testing entry point from the layer tree, thus affected
    by the element having a layer.

    Canonical link: https://commits.webkit.org/306675@main

Identifier: 305413.247@safari-7624-branch